# C-atan

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  catane.c  catane.cbp  catane_test.cbp  main.c
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
code/: catane.cbp  controleur.c  main.c  modele.c  vue.c
code/controleur/: controler.c  controler.h  controler_turn.c  controler_turn.h  controler_turn_buttons.c  controler_turn_buttons.h  controller.c  controller.h  controller_crossing.c  controller_crossing.h  controller_path.c  controller_path.h  controller_place_road.c  controller_place_road.h  controller_place_road_buttons.c  controller_place_road_buttons.h  controller_place_urb.c  controller_place_urb.h  controller_place_urb_buttons.c  controller_place_urb_buttons.h  controller_player.c  controller_player.h  controller_resource.c  controller_resource.h  controller_terrain.c  controller_terrain.h  controller_turn.c  controller_turn.h  controller_turn_buttons.c  controller_turn_buttons.h  controller_turn_events.c  controller_turn_events.h  converters.c  converters.h  main.c
code/modele/headers/: UTest-set_partie.h  get_partie.h  get_plateau.h  joueur.h  partie.h  plateau.h  ressource.h  set_partie.h  set_plateau.h  test_get_plateau.h  test_set_plateau.h
code/modele/source/: UTest-joueur.c  joueur.c  partie.c
code/modele/sources/: UTest-get_partie.c  UTest-joueur.c  UTest-partie.c  UTest-set_partie.c  get_partie.c  get_plateau.c  joueur.c  partie.c  plateau.c  set_partie.c  set_plateau.c  test_get_plateau.c  test_plateau.c  test_set_plateau.c
code/vue/: Plateau.c  Plateau.h  README.md  affiche_joueur.c  affiche_joueur.h  affiche_texte.c  affiche_texte.h  architecture.c  architecture.h  carte.c  carte.h  developpement.c  developpement.h  fenetre.c  fenetre.h  main.c  place_infra.c  plateau.c  probabilite.c  probabilite.h  tuile.c  tuile.h
controleur/: README.md  controller_turn.cbp
controleur/headers/: controller.h  controller_crossing.h  controller_dice.h  controller_help.h  controller_path.h  controller_player.h  controller_preparation.h  controller_resource.h  controller_terrain.h  controller_turn.h  controller_turn_events.h  converters.h
controleur/sources/: controller.c  controller_crossing.c  controller_dice.c  controller_help.c  controller_path.c  controller_player.c  controller_preparation.c  controller_resource.c  controller_terrain.c  controller_turn.c  controller_turn_events.c  converters.c
documents/: cdc
documents/comptes rendus reunions/: compte_rendu_reunion_1_30_01.docx  compte_rendu_reunion_2_13_02.docx
documents/diagramme de gantt previsionnel/: gantt_projet_catane.gan  gantt_projet_catane_19_02.gan  gantt_projet_catane_21_02.gan
documents/diagramme de gantt reel/: gant_reel_projet_catane.gan
modele/: README.md
modele/headers/: UTest-get_partie.h  UTest-joueur.h  get_partie.h  get_plateau.h  joueur.h  partie.h  plateau.h  set_partie.h  set_plateau.h  test_get_plateau.h  test_plateau.h  test_set_plateau.h
modele/sources/: UTest-get_partie.c  UTest-joueur.c  UTest-partie.c  UTest-set_partie.c  get_partie.c  get_plateau.c  joueur.c  partie.c  plateau.c  set_partie.c  set_plateau.c  test_set_plateau.c
tests/: catane_tests.c
tests/modele/sources/: UTest-get_partie.c  UTest-partie.c  UTest-set_partie.c  test_get_plateau.c  test_plateau.c  test_set_plateau.c
vue/headers/: SDL_erreur.h  affiche_joueur.h  affiche_texte.h  fenetre.h  place_infra.h  probabilite.h  tuile.h
vue/sources/: SDL_erreur.c  affiche_joueur.c  affiche_texte.c  architecture.c  carte.c  developpement.c  fenetre.c  main.c  place_infra.c  probabilite.c  tuile.c
